--- a/Aye/bin/AndroidManifest.xml
+++ b/Aye/bin/AndroidManifest.xml
@@ -29,6 +29,14 @@
             <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
     	</activity>
+        <activity 
+        android:name=".SetProfileActivity" 
+        android:label="@string/app_name">
+            <intent-filter>
+             <action android:name="android.intent.action.SEND" />
+            <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+    	</activity>
         <service android:name="HttpClientService"/>
         <service android:name="GcmService"/>
     </application>
